# RecipeBox-Project

./: .gitignore  pyproject.toml
recipes/: settings.py  urls.py
recipes_app/: admin.py  forms.py  models.py  urls.py  views.py
recipes_app/migrations/: 0001_initial.py  0002_remove_author_user.py  0003_recipe_image.py
recipes_app/static/: recipes.css
recipes_app/templates/: base.html  bio.html  generic_form.html  index.html  recipe.html
